--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         minSdkVersion 23
         targetSdkVersion 28
         buildToolsVersion "28.0.3"
-        versionCode 11
-        versionName "2.1"
+        versionCode 13
+        versionName "3.0-alpha2"
     }
     buildTypes {
         release {
