--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,12 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
+        android:supportsRtl="false"
         android:theme="@style/FullTheme">
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="sensorPortrait">
+            android:screenOrientation="sensorPortrait"
+            android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
@@ -23,11 +24,45 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".SetupActivity"
-            android:screenOrientation="sensorPortrait">
+            android:screenOrientation="sensorPortrait"
+            android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
+            android:noHistory="true"/>
+        <activity
+            android:name=".TravelActivity"
+            android:screenOrientation="sensorPortrait"
+            android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
+            android:noHistory="true"/>
+        <activity
+            android:name=".ReceiverActivity"
+            android:screenOrientation="sensorPortrait"
+            android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation">
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="www.ehub.ee"
+                    android:path="/elron/tulemus"
+                    android:scheme="http" />
+                <data
+                    android:host="ehub.ee"
+                    android:path="/elron/tulemus"
+                    android:scheme="https" />
+            </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="tulemus"
+                    android:scheme="tt" />
+            </intent-filter>
         </activity>
 
         <meta-data
