--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         minSdkVersion 23
         targetSdkVersion 28
         buildToolsVersion "28.0.3"
-        versionCode 19
-        versionName "3.5.RC1"
+        versionCode 20
+        versionName "3.5.RC2"
     }
     buildTypes {
         release {
@@ -30,4 +30,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha06'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.preference:preference:1.1.0-alpha04'
+    implementation 'com.google.firebase:firebase-core:16.0.9'
 }
+apply plugin: 'com.google.gms.google-services'
